--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://samarjaffal.github.io/platzi-badges",
   "name": "platzi-badges",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +10,9 @@
     "seed": "node server/seed.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "faker": "^4.1.0",
+    "gh-pages": "^2.2.0",
     "json-server": "^0.14.2",
     "npm-run-all": "^4.1.5"
   },
